FIX wrong margin-top for more-info

--- a/src/components/MoreInfoWrapper/MoreInfo/__css__/MoreInfo.less
+++ b/src/components/MoreInfoWrapper/MoreInfo/__css__/MoreInfo.less
@@ -1,5 +1,5 @@
 .more-info {
-  margin-top: 4.5em;
+  margin-top: 3.5em;
 }
 
 .more-info-attribute {
